# criterionpp

./: CMakeLists.txt  criterion.cpp  criterion.hpp  statistiscs.hpp  test_simple.cpp
